# Autonomous-Feature-Flag-Remediation-Agent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docs/: architecture.md  demo-walkthrough.md  mcp-specification.md
examples/: scenario_no_correlation.py  scenario_safety_gate.py  scenario_spike.py
src/: __init__.py  __main__.py  config.py  models.py
src/agent/: correlation_engine.py  error_monitor.py  incident_reporter.py  remediation_agent.py  safety.py
src/mcp_server/: posthog_client.py  server.py  tools.py
src/simulator/: error_stream.py  posthog_mock.py  slack_webhook.py
tests/: conftest.py  test_correlation_engine.py  test_error_monitor.py  test_mcp_tools.py  test_remediation_agent.py  test_safety.py
